test go build as root
Signed-off-by: Phil Estes <estesp@linux.vnet.ibm.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,3 +35,8 @@ jobs:
       working-directory: src/github.com/estesp/actions-playground
       run: |
         make binary
+
+    - name: r00t Build
+      working-directory: src/github.com/estesp/actions-playground
+      run: |
+        sudo make binary
