try with runc script
Signed-off-by: Phil Estes <estesp@linux.vnet.ibm.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,10 @@ jobs:
     - name: r00t Build
       working-directory: src/github.com/estesp/actions-playground
       run: |
+        echo "ACTIONS ENV:"
+        env
         sudo make binary
+        sudo ./install-runc
 
     - name: Build
       working-directory: src/github.com/estesp/actions-playground
