Add hcsshim to release workflow
Signed-off-by: Phil Estes <estesp@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,12 +80,23 @@ jobs:
           repository: containerd/containerd
           ref: ${{ github.ref }}
           path: src/github.com/containerd/containerd
-
       - name: Install Linux dependencies
         if: startsWith(matrix.os, 'ubuntu')
         run: |
           sudo apt-get install -y btrfs-tools libseccomp-dev
-
+      - name: HCS Shim Commit
+        id: hcsshim_commit
+        if: startsWith(matrix.os, 'windows')
+        shell: bash
+        run: echo "::set-output name=sha::$(grep Microsoft/hcsshim vendor.conf | awk '{print $2}')"
+        working-directory: src/github.com/containerd/containerd
+      - name: Checkout hcsshim source
+        if: startsWith(matrix.os, 'windows')
+        uses: actions/checkout@v2
+        with:
+          repository: Microsoft/hcsshim
+          ref: ${{ steps.hcsshim_commit.outputs.sha }}
+          path: src/github.com/Microsoft/hcsshim
       - name: Make
         shell: bash
         env:
@@ -96,6 +107,11 @@ jobs:
           make binaries
           [[ "${MOS}" =~ "windows" ]] && {
               OS=windows
+              (
+                bindir="$(pwd)/bin"
+                cd ../../Microsoft/hcsshim
+                GO111MODULE=on go build -mod=vendor -o "${bindir}/containerd-shim-runhcs-v1.exe" ./cmd/containerd-shim-runhcs-v1
+              )
           }
           TARFILE="containerd-${RELEASE_VER#v}-${OS}-amd64.tar.gz"
           tar czf ${TARFILE} bin/
